--- a/project_my_part/views/partial/marketsidebars.ejs
+++ b/project_my_part/views/partial/marketsidebars.ejs
@@ -14,7 +14,7 @@
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle no-arrow">
+						<a href="/markethome" class="dropdown-toggle no-arrow">
 							<span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
 						</a>
 					</li>
@@ -30,6 +30,7 @@
 						<ul class="submenu">
 							<li><a href="/markethome/<%='leads'%>">Leads</a></li>
 							<li><a href="/markethome/<%='customer'%>">Customer</a></li>
+							<li><a href="/campaigns/">Campaigns</a></li>
 						</ul>
 					</li>
 					<li>
