--- a/project_my_part/views/layout.ejs
+++ b/project_my_part/views/layout.ejs
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" type="text/css" href="/abc/vendors/styles/style.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119386393-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
