--- a/project_my_part/views/marketuser/create.ejs
+++ b/project_my_part/views/marketuser/create.ejs
@@ -1,5 +1,5 @@
-<%- include('../partial/header.ejs')%>
-<%- include('../partial/sidebars.ejs')%>
+<%- include('../partial/marketheader.ejs')%>
+<%- include('../partial/marketsidebars.ejs')%>
 <div class="main-container">
 		<div class="pd-ltr-20 xs-pd-20-10">
 			<div class="min-height-200px">
@@ -21,6 +21,7 @@
 							<input class="form-control" type="text" name="username" value=""  required>
 						</div>
 					</div>
+
 					<div class="form-group row">
 						<label class="col-sm-12 col-md-2 col-form-label">Email</label>
 						<div class="col-sm-12 col-md-10">
@@ -48,7 +49,7 @@
 						<div class="col-sm-12 col-md-10">
 							<select class="custom-select col-12" name="status" required>
 								<option value="normal" selected>NORMAL</option>
-								<option value="potential">POTENTIAL</option>
+								<option value="Potential">POTENTIAL</option>
 							</select>
 						</div>
 					</div>
