--- a/project_my_part/views/marketuser/profile.ejs
+++ b/project_my_part/views/marketuser/profile.ejs
@@ -1,6 +1,6 @@
 
-	<%- include('../partial/header.ejs')%>
-	<%- include('../partial/sidebars.ejs')%>
+	<%- include('../partial/marketheader.ejs')%>
+	<%- include('../partial/marketsidebars.ejs')%>
 	<div class="main-container">
 		<div class="pd-ltr-20 xs-pd-20-10">
 			<div class="min-height-200px">
@@ -51,11 +51,11 @@
 									</li>
 									<li>
 										<span>Username:</span>
-										<%=userlist.username%>
+										<%=userlist.name%>
 									</li>
 									<li>
-										<span>Designation:</span>
-										<%=userlist.designation%>
+										<span>gender:</span>
+										<%=userlist.gender%>
 									</li>
 									<li>
 										<span>Phone Number:</span>
@@ -76,46 +76,41 @@
 										<li class="nav-item">
 											<a class="nav-link" data-toggle="tab" href="#tasks" role="tab">Tasks</a>
 										</li>
-										<li class="nav-item">
-											<a class="nav-link active" data-toggle="tab" href="#setting" role="tab">Settings</a>
+										<li class="nav-item active">
+											<a class="nav-link" data-toggle="tab" href="#setting" role="tab">Settings</a>
 										</li>
 									</ul>
 									<div class="tab-content">
 										<!-- Setting Tab start -->
 										<div class="tab-pane fade show active height-100-p" id="setting" role="tabpanel">
 											<div class="profile-setting">
-												<% if(typeof alerts !='undefined'){alerts.forEach(function(error) {%>
-														<div class="alert alert-warning alert-dismissible fade show mt-10" role="alert">
-														  <strong><%=error.msg%></strong>
-														  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-														    <span aria-hidden="true">&times;</span>
-														  </button>
-														</div>
-												<%})}%>
+
 												<form method="post">
 													<ul class="profile-edit-list row">
 														<li class="weight-900 col-md-9">
 															<h4 class="text-blue h5 mb-20">Edit Your Personal Setting</h4>
 															<div class="form-group">
 																<label>Username</label>
-																<input class="form-control form-control-lg" type="text" name="username" value="<%=userlist.username%>" required>
-															</div>
-															<div class="form-group">
-																<label>Designation</label>
-																<input class="form-control form-control-lg" type="text" name="designation" value="<%=userlist.designation%>" required>
+																<input class="form-control form-control-lg" type="text" name="username" value="<%=userlist.name%>" required>
 															</div>
 															<div class="form-group">
 																<label>Email</label>
 																<input class="form-control form-control-lg" type="email" name="email" value="<%=userlist.email%>" required>
 															</div>
 															
-										
+															<div class="form-group">
+																<label>Gender</label>
+																<input class="form-control form-control-lg" type="text" name="gender" value="<%=userlist.gender%>" required>
+															</div>
 															
 															<div class="form-group">
 																<label>Phone Number</label>
-																<input class="form-control form-control-lg" type="text" name="phone" value="<%=userlist.phone%>" required>
+																<input class="form-control form-control-lg" type="number" name="phone" value="<%=userlist.phone%>" required>
 															</div>
-															
+															<div class="form-group">
+																<label>Status</label>
+																<input class="form-control form-control-lg" type="text" name="status" value="<%=userlist.status%>" required>
+															</div>
 															<div class="form-group mb-0">
 																<input type="submit" class="btn btn-primary" value="Update Information">
 															</div>
