--- a/assignment/views/partial/user.ejs
+++ b/assignment/views/partial/user.ejs
@@ -31,6 +31,9 @@
                 <a class="dropdown-item" href="/products/<%='ACER'%>">ACER</a>
               </div>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/cart/<%=glob.id%>">MY CART<span class="sr-only">(current)</span></a>
+            </li>
           </ul>
         </div>
       </nav> 
