--- a/assignment/views/partial/user.ejs
+++ b/assignment/views/partial/user.ejs
@@ -34,6 +34,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="/cart/<%=glob.id%>">MY CART<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/logout">LOGOUT<span class="sr-only">(current)</span></a>
+            </li>
           </ul>
         </div>
       </nav> 
